Fix the z-index of the MLH badge and navigation menu
Before, the items in the FAQ and Sponsoring sections would appear
on top of the navigation menu, and the MLH badge is below those
items. This change introduces fixes such that the navigation menu
is always on top of everything else, and the MLH badge on top of
the section items.

--- a/styles.css
+++ b/styles.css
@@ -671,6 +671,14 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
 .float-right {
   float: right;
 }
